# test-code

./: CMakeLists.txt  README.org
cpp/: CMakeLists.txt
cpp/multiply-shift/: CMakeLists.txt  README.org  test_multiply_shift.cpp
cpp/vector-alignment/: CMakeLists.txt  test_vector_alignment.cpp
opencl/: CMakeLists.txt
opencl/buffer-allocation/: CMakeLists.txt  test_buffer_allocation.cpp
opencl/buffer-reclamation/: CMakeLists.txt  test_buffer_reclamation.cpp
opencl/preferred-work-group-size/: CMakeLists.txt  preferred-work-group-size.cpp
src/: CMakeLists.txt  README.org
